--- a/styles/main.css
+++ b/styles/main.css
@@ -120,12 +120,15 @@ hr {
 }
 
 .content {
-    padding: 50px;
+    padding: 10px 50px 10px 50px;
     width: 70%;
-    background: #EBF5EE;
-    max-width: 700px;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    /*background: #EBF5EE;*/
+    border-left-style: solid;
+    border-right-style: solid;
+    border-width: 15px;
+    max-width: 670px;
+    margin-top: 70px;
+    margin-bottom: 70px;
 }
 
 .content-desc {
@@ -139,33 +142,25 @@ hr {
 }
 
 .content-details {
-    /*content: "";*/
-    clear: both;
-    display: table;
-    width: auto;
+    float: left;
+    padding-left: 20px;
 }
 
-.details-header {
-    width: 20%;
+.content-details span {
     float: left;
     text-align: left;
     opacity: 0.6;
     /*color: #8B786D;*/
 }
 
-.details-desc {
-    width: 75%;
-    float: left;
-}
-
-.details-desc ul {
+.content-details ul {
     list-style-type: none;
 }
 
-.details-desc li {
-    float: right;
-    text-align: right;
+.content-details li {
+    float: left;
     padding-left: 20px;
+    padding-top: 5px;
 }
 
 
