--- a/styles/main.css
+++ b/styles/main.css
@@ -138,6 +138,7 @@ hr {
 }
 
 .content i {
+    font-size: 18px;
     float: right;
     opacity: 0.6;
 }
@@ -179,3 +180,28 @@ hr {
     display: flex;
     justify-content: center;
 }
+
+.project {
+    max-width:660px;
+    display: flex;
+}
+
+.project a {
+    display: inline-block;
+    width: 30%;
+    height: 30%;
+    max-width: 220;
+    padding: 10px;
+}
+
+.project img {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+}
+
+.project img:hover {
+    opacity: 0.5;
+    
+}
+
