--- a/styles/main.css
+++ b/styles/main.css
@@ -1,253 +1,96 @@
-html{
+html {
     scroll-behavior :smooth;
 }
 
-
-body{
-    font-family: sans-serif;
-    /*background: white;*/
-    color: #283044;
-    height: 100%;
-    font-size: 20px;
+body {
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 21px;
 }
 
-* {
-   margin: 0px;
-   padding: 0px;
+h1 {
+    font-size: 50px;
+    font-weight: bold;
 }
 
-
-.main {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    min-height: 600px;
+.c4-izmir {
+    --primary-color: #D63D2E;
+    --secondary-color: #606060;
+    --border-margin: 10px;
+    --border-width: 1px;
+    --overlay-opacity: .5;
+    --padding: 0.5em;
 }
 
-.footer {
-    display: flex;
-    justify-content: center;
+.red {
+    color: #D63D2E;
+    font-weight: normal;
 }
 
-.footer-content {
+.card {
+    border: none;
+}
+
+#container-project img{
     width: 100%;
-    /*border-top: solid;*/
-    border-width: 1px;
-    margin-top: 50px;
-    text-align: center;
-    padding-top: 40px;
-    padding-bottom: 40px;
-    box-shadow: 0px -2px 2px -2px rgba(0,0,0,.3);
 }
 
-.navigation {
-    display: flex;
-    z-index:100; 
-    position: relative;
-    justify-content: center;
-    background: white;
-    opacity: 0.95;
+#row-contact img {
+    height: 23px;
 }
 
-.navigation ul {
-    padding-right: 10px;
-    width: 100%;
-    list-style-type: none;
-    position: fixed;
-    background: white;
-    box-shadow: 0 2px 2px -2px rgba(0,0,0,.2);
+.tab-pane li{
+    margin: 10px 0;
 }
 
-.navigation li {
+.tab-pane .card-title {
+    font-size: 27px;
+    font-weight: bold;
 }
 
-.navigation li span {
-    float: left;
-    display: block;
-    color: #283044;
-    padding: 15px 0px 15px 30px;
+.tab-pane .card-subtitle .left {
+    color: #D63D2E;
 }
 
-.navigation li a {
-    float: right;
-    display: block;
-    color: #283044;
-    padding: 15px 16px;
-    text-decoration: none;
-
+.tab-pane .card-subtitle .float-right {
+    color: #606060;
 }
 
-.navigation:hover {
-    opacity: 1.0;
+.card-header {
+    border-top: 1px solid #606060;
+    border-bottom: 1px solid #606060;
+    height: 45px;
 }
 
-.navigation li a:hover {
-    color: gray;
+
+.nav .active {
+    color: #606060;
+    font-size: 21px;
+    font-weight: bold;
 }
 
-.home {
-    /*min-height: 500px;*/
-    text-align: center;
-    list-style-type: none;
-    display : flex;
-    align-items : center;
-    justify-content: center;
-    width: 100vw;
+.nav-link {
+    color: black;
+    margin-top: -15px;
 }
 
-.me img {
-    margin-top: 20px;
-    width: 250px;
-    border-radius: 400px;
+.nav-link:hover {
+    color: #D63D2E;
 }
 
-.name {
-    padding-top: 25px;
-    font-size: 72px;
+.list-inline li:after {
+    content:'∙'; 
+    margin-left: 10px;
 }
 
-.name span {
-    opacity: 0.6;
+.list-inline li:first-child {
+    color: #606060;
 }
 
-.home-caption {
-    padding: 10px;
+.list-inline li:last-child:after {
+    content: '';
 }
 
-.interests {
-    margin: 10px;
-}
 
-.interests li {
-    display: inline;
-    white-space: nowrap;
-    line-height: 40px;
+.col-project {
+    min-width: 250px;
 }
-
-.interests span {
-    background: rgba(1, 1, 1, 0.08);
-    padding: 5px 8px 5px 8px;
-    border-radius: 5px;
-    margin-left: 3px;
-}
-
-.contacts {
-    margin-top: 60px;
-}
-
-.contacts li {
-    display: inline;
-    padding-left: 10px;
-    padding-right: 10px;
-}
-
-.contacts li a:hover {
-    opacity: 0.3;
-}
-
-.content-left {
-    height: 100%;
-    border-left-style: solid;
-    border-top-style: solid;
-    border-bottom-style: solid;
-    border-width: 15px;
-    width: 10px;
-    display: table-cell;
-}
-
-.content-right {
-    height: 100%;
-    border-right-style: solid;
-    border-top-style: solid;
-    border-bottom-style: solid;
-    border-width: 15px;
-    width: 10px;
-    display: table-cell;
-}
-
-.center {
-    display: table;
-    column-count: 3;
-    justify-content: center;
-    max-width: 830px;
-    min-width: 500px;
-    width: 80%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 90px;
-    padding-top: 70px;
-}
-
-.content {
-    padding: 70px 55px 70px 55px;
-    width: auto;
-    /*border-left-style: solid;
-    border-right-style: solid;
-    border-width: 15px;*/
-    display: table-cell;
-}
-
-.content i {
-    font-size: 18px;
-    float: right;
-    opacity: 0.6;
-}
-
-.content-title {
-    font-size: 35px;
-    padding: 15px;
-    padding-left: 0px;
-}
-
-.content-caption {
-    padding-top: 15px;
-    padding-bottom: 25px;
-}
-
-.content-details {
-    float: left;
-    padding-left: 20px;
-}
-
-.content-details span {
-    float: left;
-    text-align: left;
-    opacity: 0.6;
-    /*color: #8B786D;*/
-}
-
-.content-details ul {
-    list-style-type: none;
-}
-
-.content-details li {
-    float: left;
-    padding-left: 20px;
-    padding-top: 5px;
-}
-
-.project {
-    max-width:660px;
-    display: flex;
-}
-
-.project a {
-    display: inline-block;
-    width: 30%;
-    height: 30%;
-    max-width: 220;
-    padding: 10px;
-}
-
-.project img {
-    display: inline-block;
-    width: 100%;
-    height: 100%;
-}
-
-.project img:hover {
-    opacity: 0.7;
-    
-}
-
